Improving JMH support